# SQLite-Phasor

./: .gitattributes  CMakeLists.txt  CMakePresets.json  PKGBUILD  README.md  sqlite-phs.cpp  test.phs
.github/workflows/: cmake-multiplatform-build.yml
man3/: PHASOR_SQLITE.3
phasor/: PhasorFFI.hpp
